[gd_scene load_steps=8 format=3 uid="uid://x45u4wgns1kv"]

[ext_resource type="PackedScene" uid="uid://obhs6tqkno1" path="res://characters/enemies/enemy_template.tscn" id="1_74u02"]
[ext_resource type="Texture2D" uid="uid://c5dtlpgvynwrs" path="res://textures/basic_shapes/circle.png" id="1_gd8me"]
[ext_resource type="Script" path="res://characters/enemies/slime.gd" id="2_gmxiq"]
[ext_resource type="AudioStream" uid="uid://b8qviy7bfhtrq" path="res://audio/hit.mp3" id="3_uqbw8"]
[ext_resource type="PackedScene" uid="uid://diomq7ktk2cds" path="res://characters/enemies/abilities/slimegun.tscn" id="4_w5esg"]
[ext_resource type="AudioStream" uid="uid://b2irwlgpn2q8c" path="res://audio/shoot_ball.mp3" id="5_qxyvi"]
[ext_resource type="AudioStream" uid="uid://ctr558epsu1ek" path="res://audio/dash.mp3" id="6_oeaq7"]

[node name="slime" groups=["enemy"] instance=ExtResource("1_74u02")]
script = ExtResource("2_gmxiq")

[node name="hp_manager" parent="." index="2" node_paths=PackedStringArray("hp_bar")]
hp_bar = NodePath("../Progress_bar")
hp_max = 70.0

[node name="hitsound" type="AudioStreamPlayer2D" parent="hp_manager" index="0"]
stream = ExtResource("3_uqbw8")
bus = &"SFX"

[node name="Progress_bar" parent="." index="3"]
position = Vector2(0, -50)

[node name="visuals" type="Node2D" parent="." index="4"]
scale = Vector2(1.6, 1.6)

[node name="Sprite2D" type="Sprite2D" parent="visuals" index="0"]
modulate = Color(0.217874, 0.588277, 0.961465, 1)
scale = Vector2(0.07, 0.07)
texture = ExtResource("1_gd8me")

[node name="Sprite2D2" type="Sprite2D" parent="visuals" index="1"]
modulate = Color(0.0850704, 0.651883, 0.708155, 1)
z_index = -1
position = Vector2(-10, -5)
scale = Vector2(0.053, 0.051)
texture = ExtResource("1_gd8me")

[node name="Sprite2D3" type="Sprite2D" parent="visuals" index="2"]
modulate = Color(0.637206, 0.446807, 0.985787, 1)
z_index = -1
position = Vector2(5, 8)
scale = Vector2(0.0625, 0.051)
texture = ExtResource("1_gd8me")

[node name="Sprite2D4" type="Sprite2D" parent="visuals" index="3"]
modulate = Color(0.473932, 0.539113, 0.87455, 1)
position = Vector2(7.90625, -9.5625)
scale = Vector2(0.043625, 0.04175)
texture = ExtResource("1_gd8me")

[node name="Sprite2D5" type="Sprite2D" parent="visuals" index="4"]
modulate = Color(0.323861, 0.377995, 0.747981, 1)
z_index = -2
position = Vector2(-6, 7)
scale = Vector2(0.0598125, 0.050875)
texture = ExtResource("1_gd8me")

[node name="move_timer" type="Timer" parent="." index="5"]
wait_time = 1.2

[node name="move_delay" type="Timer" parent="." index="6"]
wait_time = 0.1
one_shot = true
autostart = true

[node name="slimegun" parent="." index="7" instance=ExtResource("4_w5esg")]

[node name="attack_sound" type="AudioStreamPlayer2D" parent="slimegun" index="0"]
stream = ExtResource("5_qxyvi")
pitch_scale = 0.62
attenuation = 2.54912
max_polyphony = 8
bus = &"SFX"

[node name="dash_sound" type="AudioStreamPlayer2D" parent="." index="8"]
stream = ExtResource("6_oeaq7")
volume_db = 5.333
pitch_scale = 0.5
attenuation = 2.07053
bus = &"SFX"

[connection signal="timeout" from="move_timer" to="." method="move_timeout"]
[connection signal="timeout" from="move_delay" to="." method="delay_timeout"]
